--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern-auth",
+  "name": "email-campaigner",
   "version": "1.0.0",
-  "description": "Mern Auth Example",
+  "description": "This is a Email Campaigner",
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client" 
   },
-  "author": "",
+  "author": "hemanth",
   "license": "MIT",
   "dependencies": {
     "@sendgrid/client": "^7.1.1",
