--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-app-rewired": "^2.1.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -39,7 +40,6 @@
   "proxy": "http://localhost:5000/api",
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
-    "react-app-rewire-less": "^2.1.3",
-    "react-app-rewired": "^2.1.6"
+    "react-app-rewire-less": "^2.1.3"
   }
 }
