--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-app-rewired": "^2.1.6",
-    "react-app-rewire-less": "^2.1.3"
+    "react-app-rewire-less": "^2.1.3",
+    "babel-plugin-import": "^1.13.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -38,8 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/api",
-  "devDependencies": {
-    "babel-plugin-import": "^1.13.0"
-  }
+  "proxy": "http://localhost:5000/api"
 }
